duniverse/menhirLib.20200211/test/static/bad/lots-of-errors-b.mly
%token FOO BAR <int> /* the error is the type */

%%

main: HOP BAZ QUUX { () }

