duniverse/menhirLib.20200211/test/static/bad/lots-of-errors-b.exp
File "lots-of-errors-b.mly", line 1, characters 15-20:
Error: syntax error after 'BAR' and before '<int>'.
Ill-formed '%token' declaration.
Examples of well-formed declarations:
  %token FOO
  %token BAR "|"
  %token DOT "." SEMICOLON ";"
  %token <string> LID UID
  %token FOO [@cost 0]
